--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@ body, #top #bottom {
     align-items: center;
     justify-content: center;
     font-family:Arial, Helvetica, sans-serif;
-    
+    background-color: #00ffcb; 
+  color: black;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
 }
+    
+
 
 header, #middle {
     display: flex;
