--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, #top #bottom {
     justify-content: center;
     font-family:Arial, Helvetica, sans-serif;
     background-color: #00ffcb; 
-  color: black;
+  color: rgb(234, 20, 166);
   font-family: 'Poppins', sans-serif;
   text-align: center;
 }
