--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body, #top #bottom {
     align-items: center;
     justify-content: center;
     font-family:Arial, Helvetica, sans-serif;
-    background-color: #00ffcb; 
+    background-color: #20cba9; 
   color: rgb(234, 20, 166);
   font-family: 'Poppins', sans-serif;
   text-align: center;
