--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body, #top #bottom {
     justify-content: center;
     font-family:Arial, Helvetica, sans-serif;
     background-color: #68cfff; 
-  color: rgb(234, 20, 166);
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
+    color: black;  
+    text-align: center;
 }
     
 
@@ -15,28 +14,23 @@ body, #top #bottom {
 header, #middle {
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-family:Arial, Helvetica, sans-serif;
+    justify-content: center;    
 }
 
 * {
     padding: 10px;
-    font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;   
 }
 
 h1 {
     font-size: 40px;
-    text-decoration: underline;
-    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: underline;    
 }
 
 #question {
-    
-    font-family:Arial, Helvetica, sans-serif;
+    font-style: italic;    
 }
 
 header {
-    margin-bottom: 0px;
-    font-family:Arial, Helvetica, sans-serif;
+    margin-bottom: 0px;    
 }
