--- a/style.css
+++ b/style.css
@@ -1,36 +1,143 @@
-body, #top #bottom {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family:Arial, Helvetica, sans-serif;
-    background-color: #68cfff; 
-    color: black;  
-    text-align: center;
-}
-    
+/* Declare colour scheme variables 
 
+--ruby-red: #8d2626ff;
+--baby-powder: #f6f7f0ff;
+--harvest-gold: #d59120ff;
+--russian-violet: #28074B;
+--independence: #4f4d68ff;
+*/
 
-header, #middle {
-    display: flex;
-    align-items: center;
-    justify-content: center;    
+:root {
+    --primary-color: #28074B;
+    --primary-highlight-color: #4f4d68ff;
+    --secondary-color: #d59120ff;
+    --body-color: #f6f7f0ff;
+    --main-headings-color: #262631ff;
+    --secondary-headings-color: #f6f7f0ff;
+    --main-text-color: #262631ff;
+    --secondary-text-color: #262631ff;
 }
 
 * {
-    padding: 10px;
-    font-size: 20px;   
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-h1 {
-    font-size: 40px;
-    text-decoration: underline;    
+
+body, header, #middle, #bottom, main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;       
+    text-align: center;
+}
+
+body {
+    background-color: var(--body-color);
+}
+
+
+main {    
+    width: 50%;
+    height: 100vh;
+    justify-content: space-around;   
+}
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 30%;   
+    border: 3px solid var(--secondary-color); 
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+
+
+#middle {
+    background-color: var(--primary-color);
+    height: 50%;
+    width: 100%;
+    justify-content: space-around;
+    padding: 0 0 40px 0;
+    margin-bottom: 2px;
+    
+}
+
+#bottom {
+    border: 3px solid var(--secondary-color); 
+    width: 100%;
+    height: 20%;
+    margin: 0px;
+    margin-bottom: 2px;
+
+}
+
+#title {
+    font-size: 40px;    
+    color: var(--main-headings-color);    
 }
 
 #question {
-    font-style: italic;    
+    font-style: italic;
+    color: var(--secondary-headings-color);
+    height: 50%;
+    width: 100%;     
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    font-size: 38px;
+     
 }
 
-header {
-    margin-bottom: 0px;    
+#question-number {
+    height: 10%; 
+    display: flex;   
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    color: var(--secondary-headings-color);
+    background-color: var(--primary-highlight-color);
+    padding-left: 10px;
+    border-bottom: 1px solid var(--secondary-headings-color)
 }
+
+
+#button-container {
+    display: grid;
+    column-gap: 20px;
+    row-gap: 20px;
+    width: 80%;
+    height: 40%;
+    grid-template-columns: repeat(2, 1fr);
+    
+}
+
+.answer-buttons {
+    width: 100%;
+    height: 100%;    
+    justify-self: center;
+    align-self: center;
+    border: 3px solid var(--secondary-color); 
+    border-radius: 25px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.answer-buttons-row-1 {
+    grid-row: 1;
+}
+
+.answer-buttons-row-2 {
+    grid-row: 2;
+}
+
+
+
+
+
+
+
